--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
@@ -25,19 +26,12 @@ TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
-[extras]
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test", "BenchmarkTools"]
-
 [compat]
-julia = "1.10 - 1"
 BenchmarkTools = "1.6"
 CSV = "0.10.15 - 0.10"
 DifferentialEquations = "7.16.1 - 7.16"
 DocStringExtensions = "0.9.4 - 0.9"
+EnumX = "1.0.6"
 ForwardDiff = "0.10.38 - 0.10"
 JLD2 = "0.5.12 - 0.5"
 NLopt = "1.1.3 - 1.1"
@@ -48,3 +42,11 @@ StaticArrays = "1.9.13 - 1.9"
 StatsPlots = "0.15.7 - 0.15"
 Tables = "1.12.0 - 1.12"
 Zygote = "0.7.6"
+julia = "1.10 - 1"
+
+[extras]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "BenchmarkTools"]
